--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
-    "next": "13.4.5",
+    "eslint": "8.41.0",
+    "eslint-config-next": "13.4.3",
+    "mongoose": "6.11.1",
+    "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sass": "^1.63.3"
+    "sass": "^1.63.3",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
