--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "luxon": "^3.3.0",
     "mongoose": "6.11.1",
     "next": "13.4.3",
     "next-auth": "^4.22.1",
